# WorkTimeRecording

./: .gitignore  .gitmodules  Documentation.Doxyfile  README.md
LICENSES/: BSD-3-Clause.txt  GPL-3.0-or-later.txt  LICENSE  MIT.txt  Unlicensed.txt
docs/: FetchWeatherMachine.uml  Finiten_Automaten_und_Boost_Statechart.md  parts.xlsx  worktime_recording.xlsx
src/: .clang-format  CMakeLists.txt  adecc_boost_settings.cmake  adecc_cmake_tools_settings.cmake  adecc_qt_settings.cmake  adecc_tao_settings.cmake
src/ApplicationServer/: AppServer.cpp  Basics_i.cpp  Basics_i.h  CMakeLists.txt  Company_i.cpp  Company_i.h  Documentation.h  EmployeeData.h  Employee_i.cpp  Employee_i.h  adecc_cmake_tools_settings.cmake  adecc_tao_settings.cmake
src/BoostTools/: CMakeLists.txt  CmakeLists.txt
src/BoostTools/include/: BoostBeastTools.h  BoostJsonFrom.h  BoostJsonTools.h
src/Client/: CMakeLists.txt  CMakePresets.json  Client.cpp  Employee_Tools.h
src/CorbaTools/: Basics_i.cpp  CMakeLists.txt
src/CorbaTools/include/: BasicTraits.h  BasicUtils.h  CorbaAccessor.h  CorbaEvent.h  CorbaUtils.h  Corba_CombiInterface.h  Corba_EventServer.h  Corba_Interfaces.h  Corba_Nameservice.h  Corba_PhalanxInterface.h  SystemInfo.h
src/Documentation/: Documentation.h  Documentation_AppServer.h  Documentation_CORBAClientServer.h  Documentation_CRTP_Statecharts.h  Documentation_Client.h  Documentation_Interface.h  Documentation_Licenses.h  Documentation_POA_Architecture.cpp  Documentation_POA_Architecture.h  Documentation_RaspberryTools.h  Documentation_WeatherAPIServer.h  Documentation_fsm.h
src/IDL/: Basics.idl  Organization.idl  Sensors.idl  Weather.idl
src/IDLGen/: CMakeLists.txt
src/RaspberryTerminal/: CMakeLists.txt  RaspTerminal.cpp  Sensoring.h
src/RaspberryTools/: BH1750.h  BME280.h  Display20x4.h  DisplayInterface.h  I2CDevice.h  SPI.h  SPIDevice.h  SensorInterfaces.h
src/Tools/: Corba_CombiInterface.h  Corba_Interfaces.h  Corba_Nameservice.h  Tools.h  convert.h  formatter_optional.h  my_logging.h
src/WeatherAPI/: CMakeLists.txt  WeatherAPI.h  WeatherData.cpp  WeatherData.h  WeatherPrint.cpp  WeatherPrint.h  WeatherReader.cpp  WeatherReader.h
src/WeatherAPIClient/: CMakeLists.txt  WeatherAPIClient.cpp
src/WeatherAPIServer/: CMakeLists.txt  EventScheduler.h  Utility.h  WeatherProxy.h  WeatherServer.cpp  Weather_i.cpp  Weather_i.h  wincompat.manifest
src/WeatherClient/: CMakeLists.txt  Documentation.h  WeatherClient.cpp  WeatherClientOld.cpp  WeatherData.cpp  WeatherData.h  WeatherReader.h
src/WeatherClient_intro/: CMakeLists.txt  WeatherClient_pre.cpp
src/WeatherServer/: WeatherServer.cpp
